--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "7.15.3",
     "@mantine/hooks": "7.15.3",
+    "jspdf": "^2.5.2",
     "next": "15.0.1",
     "next-intl": "^3.26.3",
     "react": "18.3.1",
