--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@mantine/core": "7.15.3",
     "@mantine/hooks": "7.15.3",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.471.1",
     "next": "15.0.1",
     "next-intl": "^3.26.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/node": "20.14.8",
