--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@mantine/core": "7.15.3",
+    "@mantine/dates": "^7.15.3",
     "@mantine/hooks": "7.15.3",
+    "cookies-next": "^5.0.2",
+    "dayjs": "^1.11.13",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.471.1",
     "next": "15.0.1",
     "next-intl": "^3.26.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
