--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "7.15.3",
     "@mantine/dates": "^7.15.3",
     "@mantine/hooks": "7.15.3",
+    "@mantine/notifications": "^7.15.3",
     "cookies-next": "^5.0.2",
     "dayjs": "^1.11.13",
     "jspdf": "^2.5.2",
