--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-imask": "^7.6.1",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
