--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/dates": "^7.15.3",
     "@mantine/hooks": "7.15.3",
     "@mantine/notifications": "^7.15.3",
+    "@sentry/nextjs": "^8",
     "cookies-next": "^5.0.2",
     "dayjs": "^1.11.13",
     "jspdf": "^2.5.2",
