--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-imask": "^7.6.1",
+    "react-otp-input": "^3.1.1",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
