--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@mantine/hooks": "7.15.3",
         "@mantine/notifications": "^7.15.3",
         "@sentry/nextjs": "^8",
+        "clsx": "^2.1.1",
         "cookies-next": "^5.0.2",
         "dayjs": "^1.11.13",
         "jspdf": "^2.5.2",
