--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "cy:open": "cypress open"
     },
     "dependencies": {
         "@mantine/core": "7.15.3",
@@ -34,6 +35,7 @@
         "@types/qrcode": "^1",
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
+        "cypress": "^14.0.1",
         "eslint": "8.57.0",
         "eslint-config-next": "14.2.4",
         "postcss": "^8.4.38",
