feat: ticket scan start

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@mantine/hooks": "7.15.3",
         "@mantine/notifications": "^7.15.3",
         "@sentry/nextjs": "^8",
+        "@yudiel/react-qr-scanner": "^2.2.1",
         "clsx": "^2.1.1",
         "cookies-next": "^5.0.2",
         "dayjs": "^1.11.13",
